use bfsu apt mirror

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,9 +17,11 @@ ENV LLVM_ROOT=${BASE_DIR}/llvm_root \
 # for barvinok shared libs
 ENV LD_LIBRARY_PATH=${BARVINOK_INSTALL}/lib
 
-# install apt depdendencies
-# config github mirror
-RUN	apt update \
+# config mirrors and install depdendencies packages from apt
+RUN cp /etc/apt/sources.list /etc/apt/sources.list.bak \
+    && sed -i 's/archive.ubuntu.com/mirrors.bfsu.edu.cn/g' /etc/apt/sources.list \
+    && sed -i 's/security.ubuntu.com/mirrors.bfsu.edu.cn/g' /etc/apt/sources.list \
+    && apt update \
     && apt install -y git cmake python clang libclang-dev llvm \
     default-jdk autoconf libtool libgmp-dev libz-dev zip g++ wget libpapi-dev \
     && git config --global url."https://github.com.cnpmjs.org/".insteadOf "https://github.com/"
