--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -100,15 +100,6 @@ RUN cd $BASE_DIR && tar -xzf openmpi-2.1.1.tar.gz && rm openmpi-2.1.1.tar.gz \
     && make install \
     && cp ${BASE_DIR}/openmpi-2.1.1/install/lib/mpi.jar ${POLYITE_ROOT}/lib/
 
-# install sbt
-RUN apt install -y apt-transport-https curl sudo \
-    && echo "deb https://repo.scala-sbt.org/scalasbt/debian all main" | sudo tee /etc/apt/sources.list.d/sbt.list \
-    && echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | sudo tee /etc/apt/sources.list.d/sbt_old.list \
-    && curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | sudo -H gpg --no-default-keyring --keyring gnupg-ring:/etc/apt/trusted.gpg.d/scalasbt-release.gpg --import \
-    && sudo chmod 644 /etc/apt/trusted.gpg.d/scalasbt-release.gpg \
-    && apt update \
-    && apt install sbt
-
 # fix scala-isl-utils and chernikova source paths to satisfy sbt
 RUN cd ${ISL_UTILS_ROOT} \
     && mkdir -p src/main/scala \
@@ -116,6 +107,17 @@ RUN cd ${ISL_UTILS_ROOT} \
     && cd ${CHERNIKOVA_ROOT} \
     && mkdir -p src/main/scala \
     && mv src/org/ src/main/scala/
+
+# install and run sbt
+RUN apt install -y apt-transport-https curl sudo \
+    && echo "deb https://repo.scala-sbt.org/scalasbt/debian all main" | sudo tee /etc/apt/sources.list.d/sbt.list \
+    && echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | sudo tee /etc/apt/sources.list.d/sbt_old.list \
+    && curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | sudo -H gpg --no-default-keyring --keyring gnupg-ring:/etc/apt/trusted.gpg.d/scalasbt-release.gpg --import \
+    && sudo chmod 644 /etc/apt/trusted.gpg.d/scalasbt-release.gpg \
+    && apt update \
+    && apt install sbt \
+    && cd ${POLYITE_ROOT} \
+    && sbt package
 
 # prepare polybench
 RUN cd ${BASE_DIR} \
